--- a/package.json
+++ b/package.json
@@ -13,16 +13,30 @@
     "fetch:wallhaven": "bun --env-file=.env src/fetch_wallhaven.ts",
     "fetch:steamwe": "bun --env-file=.env src/fetch_steam_we.ts",
     "build:manifest": "bun --env-file=.env src/manifest/buildManifest.ts",
-    "pipeline:all": "npm run crawl:4kw && npm run fetch:pinterest && npm run fetch:steam:we && npm run build:manifest",
+    "pipeline:all": "npm run crawl:4kw && npm run fetch:pinterest && npm run fetch:steamwe && npm run build:manifest",
+    "pipeline:run": "bun --env-file=.env src/pipeline/run.ts",
+    "pipeline:ui": "bun --env-file=.env src/server/index.ts",
     "lint": "eslint . --ext .ts,.tsx || true"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.632.0",
+    "@xenova/transformers": "^2.17.2",
+    "cheerio": "^1.0.0",
+    "commander": "^12.1.0",
+    "cos-nodejs-sdk-v5": "^2.13.5",
+    "csv-parse": "^5.5.6",
+    "csv-stringify": "^6.5.2",
     "crypto-js": "^4.2.0",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
     "dotenv": "^17.2.2",
     "image-hash": "^5.3.2",
     "node-fetch": "^3.3.2",
-    "sharp": "^0.33.4"
+    "p-limit": "^5.0.0",
+    "sharp": "^0.33.4",
+    "slugify": "^1.6.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.2",
